added the data html and fixed some issues

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                        the OpenWeatherMap API to create a dataset for over 500 cities. 
                     </p>
                     <p>After assembling the dataset, we used Matplotlib to plot various aspects of the weather vs latitude. Factors we looked at
-                       included temperture, humidity, cloudiness, and wind speed. This site provides the source data and visualizations that were 
+                       included temperature, humidity, cloudiness, and wind speed. This site provides the source data and visualizations that were 
                        created as part of this project.
                     </p>
                 </div>
